@@ -10,14 +10,17 @@ import se.inera.ehds.mapping.rivta.doclist.PersonIdType;
 import se.inera.ehds.mapping.rivta.doclist.GetDocumentListResponse;
 import se.inera.ehds.soap.sei.GetDocumentListResponderInterface;
 
-import java.util.Collections;
+import java.util.HashMap;
+import java.util.Map;
 
 /**
  * CXF-based SOAP client for RIVTA GetDocumentList:1.
  *
- * NTjP call pattern:
+ * Call pattern (post T1/F1-uppslag, se CatalogDiscoveryService):
+ *   - endpointAddress: den fysiska adress som slagits upp via tjänstekatalogen (T1)
  *   - LogicalAddress header: target VG's HSA-id (RIVTA routing)
  *   - x-rivta-original-serviceconsumer-hsaid: bridge's own HSA-id
+ *   - Authorization: Bearer-åtkomstintyg hämtat från åtkomstintygsutfärdaren
  *   - mTLS: placeholder — configure CXF HTTPConduit with SITHS keystore in production
  *   - SAML: placeholder — add WS-Security interceptor with bridge's SITHS cert in production
  */
@@ -26,6 +29,7 @@ public class GetDocumentListClient {
     private static final Logger log = LoggerFactory.getLogger(GetDocumentListClient.class);
 
     private static final String CONSUMER_HSA_HEADER = "x-rivta-original-serviceconsumer-hsaid";
+    private static final String AUTHORIZATION_HEADER = "Authorization";
 
     private final JaxWsProxyFactoryBean factory;
     private final String bridgeHsaId;
@@ -40,27 +44,29 @@ public class GetDocumentListClient {
     }
 
     /**
-     * Calls GetDocumentList via NTjP at the given endpoint URL.
-     * NTjP routes the call to the correct producer based on the logicalAddress header.
+     * Calls GetDocumentList at the endpoint address resolved via T1 (tjänstekatalogen).
      *
-     * @param ntjpUrl        NTjP endpoint URL (same for all calls, e.g. http://ntjp:80/vp/...)
-     * @param logicalAddress HSA-id of target VG — NTjP uses this for routing
-     * @param patientRoot    OID for patient ID type (e.g. 1.2.752.129.2.1.3.1)
-     * @param patientValue   Patient ID value (personnummer/samordningsnummer)
+     * @param endpointAddress Fysisk adress uppslagen via CatalogDiscoveryService (T1)
+     * @param logicalAddress  HSA-id of target VG — kvarstår som RIVTA-routingheader
+     * @param patientRoot     OID for patient ID type (e.g. 1.2.752.129.2.1.3.1)
+     * @param patientValue    Patient ID value (personnummer/samordningsnummer)
+     * @param accessToken     Åtkomstintyg (OAuth2 access token) från åtkomstintygsutfärdaren
      */
-    public GetDocumentListResponse call(String ntjpUrl, String logicalAddress,
-                                        String patientRoot, String patientValue) {
+    public GetDocumentListResponse call(String endpointAddress, String logicalAddress,
+                                        String patientRoot, String patientValue, String accessToken) {
         GetDocumentListResponderInterface port =
                 (GetDocumentListResponderInterface) factory.create();
 
         BindingProvider bp = (BindingProvider) port;
-        bp.getRequestContext().put(BindingProvider.ENDPOINT_ADDRESS_PROPERTY, ntjpUrl);
+        bp.getRequestContext().put(BindingProvider.ENDPOINT_ADDRESS_PROPERTY, endpointAddress);
         bp.getRequestContext().put("jakarta.xml.ws.client.receiveTimeout", 10000L);
         bp.getRequestContext().put("jakarta.xml.ws.client.connectionTimeout", 5000L);
 
-        // Bridge identifies itself as the consumer towards NTjP.
-        bp.getRequestContext().put(MessageContext.HTTP_REQUEST_HEADERS,
-                java.util.Map.of(CONSUMER_HSA_HEADER, Collections.singletonList(bridgeHsaId)));
+        // Bridge identifies itself as the consumer, and presents its åtkomstintyg.
+        Map<String, java.util.List<String>> httpHeaders = new HashMap<>();
+        httpHeaders.put(CONSUMER_HSA_HEADER, java.util.List.of(bridgeHsaId));
+        httpHeaders.put(AUTHORIZATION_HEADER, java.util.List.of("Bearer " + accessToken));
+        bp.getRequestContext().put(MessageContext.HTTP_REQUEST_HEADERS, httpHeaders);
 
         // Build request
         PersonIdType patientId = new PersonIdType();
@@ -70,7 +76,7 @@ public class GetDocumentListClient {
         GetDocumentList request = new GetDocumentList();
         request.setPatientId(patientId);
 
-        log.debug("GetDocumentList → {} (logicalAddress={})", ntjpUrl, logicalAddress);
+        log.debug("GetDocumentList → {} (logicalAddress={})", endpointAddress, logicalAddress);
         return port.getDocumentList(logicalAddress, request);
     }
 }
